--- a/talents.html
+++ b/talents.html
@@ -8,17 +8,26 @@
 
 </head>
 <body>
-    <header class="Title">
+    <header class="Title"> 
+    <a id="iAm" href="index.html">Back</a>
         <h1 id="Title">Talents</h1>
     </header>
     <div>
         <h3>
-            <p id="talentText"> one of my talents is to take photos. (I took these pictures) <br>
-            ever since i got my first phone when i was six, i found my <br>
-            talent of taking pictures. The picture on the left was taken <br>
-            when i was on a school trip to dc, and the gorilla picture <br>
-             was taken when i went to the zoo with my family. </p> 
+            <p id="talentText"> one of my talents is to take photos. (I took these 
+            pictures) ever since i got my first phone when i was six, i 
+            found my talent of taking pictures. The picture on the left was 
+            taken when i was on a school trip to dc, and the gorilla
+             picture was taken when i went to the zoo with my family. </p> 
             </h3>
+
     </div>
+<div class="Row">
+    <div class="Talents">
+        <img src="Screenshot 2024-07-29 at 2.45.12 PM.png"></div>
+    <div class="Talen">
+        <img src="Screenshot 2024-07-29 at 2.45.35 PM.png"></div>
+</div>
+
 </body>
 </html>
